<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_call"
        android:icon="@drawable/ic_baseline_call_24"
        android:title="@string/itemNameContactPhone"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_message"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/itemNameContactMessage"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_editContact"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/itemContactEdit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/itemContactDelete"
        app:showAsAction="ifRoom" />
</menu>