<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1587F8"
    android:orientation="vertical"
    tools:context=".EditContact">

    <include
        android:id="@+id/toolBarContactEditPage"
        layout="@layout/toolbar_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTintMode="src_in" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#1587F8"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/photoTint"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contactNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/editContact"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/editContactPhoto"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_baseline_person_24" />

            <EditText
                android:id="@+id/editContactName"
                android:layout_width="@dimen/nameWidth"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/addContactNameMarginTop"
                android:ems="10"
                android:fontFamily="@font/aldrich"
                android:hint="@string/addContactName"
                android:inputType="text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editContactPhone"
                android:layout_width="@dimen/nameWidth"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/addContactSpaceBetweenTextView"
                android:ems="10"
                android:fontFamily="@font/aldrich"
                android:hint="@string/addContactPhone"
                android:inputType="phone"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editContactAddress"
                android:layout_width="@dimen/nameWidth"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/addContactSpaceBetweenTextView"
                android:ems="10"
                android:fontFamily="@font/aldrich"
                android:hint="@string/addContactAddress"
                android:inputType="text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editContactEmail"
                android:layout_width="@dimen/nameWidth"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/addContactSpaceBetweenTextView"
                android:ems="10"
                android:fontFamily="@font/aldrich"
                android:hint="@string/addContactEmail"
                android:inputType="text"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editContactWorkPhone"
                android:layout_width="@dimen/nameWidth"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/addContactSpaceBetweenTextView"
                android:ems="10"
                android:fontFamily="@font/aldrich"
                android:hint="@string/addContactWorkPhone"
                android:inputType="phone"
                android:textAlignment="center" />

            <Button
                android:id="@+id/editContactSave"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/addContactSave"
                android:textColor="#0C0C0C"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>