<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolBarContact"
        layout="@layout/toolbar_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTintMode="src_in" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/photoTint"
        android:fillViewport="true"
        android:orientation="vertical"
        tools:context=".ResetPassword">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:text="@string/resetPasswordTextView"
                android:textColor="#000000"
                android:textSize="@dimen/signUpHeadingSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/resetPasswordEmail"
                android:layout_width="@dimen/resetPasswordEmailWidth"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/signUpEmailMarginTop"
                android:ems="10"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:hint="@string/emailHint"
                android:inputType="text"
                android:textAlignment="center" />

            <Button
                android:id="@+id/resetPasswordButton"
                android:layout_width="@dimen/resetPasswordSendButtonWidth"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/resetPasswordSendButtonMarginTop"
                android:fontFamily="@font/aldrich"
                android:text="@string/ResetPassword"
                android:textColor="#0C0C0C"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
